Fixed scrolling dependency issue by switching to react-scroll plugin, fixed clicking moon issue by implementing z-index to scroll button

--- a/src/templates/home.scss
+++ b/src/templates/home.scss
@@ -134,6 +134,7 @@
 	&.hidden {
 		opacity: 0;
 		transition: all 1000ms ease-in-out;
+		z-index: 0;
 	}
 }
 
